// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRow should omit the currency for transactions from test networks 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 iSFAiI"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gAghjF"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="TransactionRow__ID"
              href="#"
              rel="noopener noreferrer"
              to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ dnaihB"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    id.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT text-theme-secondary-text"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
              >
                <div
                  class="sc-bdfBwQ hjDozt"
                  height="20"
                  width="20"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-40 xl:w-full"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="inline-flex space-x-1 align-middle"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-bdfBwQ YOUAE"
                  data-testid="TransactionRowInfo__vendorField"
                  height="16"
                  width="17"
                >
                  <svg>
                    memo.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-bdfBwQ fdJUih text-theme-warning-600"
                data-testid="TransactionRowConfirmation__pending"
                height="22"
                width="22"
              >
                <svg>
                  status-pending.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end"
          >
            <div
              class="Label-sc-1tj9hzr-0 ganlOQ whitespace-nowrap"
              color="danger"
            >
              <span
                data-testid="AmountCrypto"
              >
                - 121 BTC
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kKpqmt justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__currency"
            >
              N/A
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow should show transaction with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 iSFAiI"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gAghjF"
          >
            <a
              class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
              data-testid="TransactionRow__ID"
              href="#"
              rel="noopener noreferrer"
              to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
            >
              <span
                class="break-all border-b border-transparent duration-200 group-hover:border-current"
              >
                <div
                  class="sc-bdfBwQ dnaihB"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    id.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT text-theme-secondary-text"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
              >
                <div
                  class="sc-bdfBwQ hjDozt"
                  height="20"
                  width="20"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-40 xl:w-full"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="inline-flex space-x-1 align-middle"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-bdfBwQ YOUAE"
                  data-testid="TransactionRowInfo__vendorField"
                  height="16"
                  width="17"
                >
                  <svg>
                    memo.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-bdfBwQ fdJUih text-theme-warning-600"
                data-testid="TransactionRowConfirmation__pending"
                height="22"
                width="22"
              >
                <svg>
                  status-pending.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end"
          >
            <div
              class="Label-sc-1tj9hzr-0 ganlOQ whitespace-nowrap"
              color="danger"
            >
              <span
                data-testid="AmountCrypto"
              >
                - 121 BTC
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kKpqmt justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__currency"
            >
              <span
                class="text-theme-secondary-text"
                data-testid="AmountCrypto"
              >
                0 BTC
              </span>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
